--- a/lib/isc/Makefile.in
+++ b/lib/isc/Makefile.in
@@ -52,7 +52,7 @@ OBJS =		pk11.@O@ pk11_result.@O@ \
 		event.@O@ hash.@O@ ht.@O@ heap.@O@ hex.@O@ hmac.@O@ \
 		httpd.@O@ iterated_hash.@O@ \
 		lex.@O@ lfsr.@O@ lib.@O@ log.@O@ \
-		md.@O@ mem.@O@ mutexblock.@O@ \
+		md.@O@ mem.@O@ mutexblock.@O@ netmgr.@O@ \
 		netaddr.@O@ netscope.@O@ nonce.@O@ openssl_shim.@O@ pool.@O@ \
 		parseint.@O@ portset.@O@ quota.@O@ radix.@O@ random.@O@ \
 		ratelimiter.@O@ region.@O@ regex.@O@ result.@O@ \
@@ -71,7 +71,7 @@ SRCS =		pk11.c pk11_result.c \
 		entropy.c error.c event.c hash.c ht.c heap.c hex.c hmac.c \
 		httpd.c iterated_hash.c \
 		lex.c lfsr.c lib.c log.c \
-		md.c mem.c mutexblock.c \
+		md.c mem.c mutexblock.c netmgr.c \
 		netaddr.c netscope.c nonce.c openssl_shim.c pool.c \
 		parseint.c portset.c quota.c radix.c random.c \
 		ratelimiter.c region.c regex.c result.c rwlock.c \
