--- a/config.h.in
+++ b/config.h.in
@@ -309,6 +309,9 @@
 /* Have PTHREAD_PRIO_INHERIT. */
 #undef HAVE_PTHREAD_PRIO_INHERIT
 
+/* Define to 1 if you have the `pthread_rwlock_rdlock' function. */
+#undef HAVE_PTHREAD_RWLOCK_RDLOCK
+
 /* Define to 1 if you have the `pthread_setaffinity_np' function. */
 #undef HAVE_PTHREAD_SETAFFINITY_NP
 
@@ -362,9 +365,6 @@
 
 /* Define to 1 if you have the `setresuid' function. */
 #undef HAVE_SETRESUID
-
-/* Define to 1 if you have the `sigwait' function. */
-#undef HAVE_SIGWAIT
 
 /* define if struct stat has st_mtim.tv_nsec field */
 #undef HAVE_STAT_NSEC
