see what git diff reports

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -164,6 +164,7 @@ misc:sid:amd64:
     - diff -urNap util/copyrights util/newcopyrights
     - rm util/newcopyrights
     - perl -w util/update_copyrights < util/copyrights
+    - git diff
     - if test "$(git status --porcelain | grep -Ev '\?\?' | wc -l)" -gt "0"; then git status --short; exit 1; fi
     - xmllint --noout --nonet `git ls-files '*.xml' '*.docbook'`
     - xmllint --noout --nonet --html `git ls-files '*.html'`
