Properly handle NSEC3PARAM in unsigned zone files
Initial zone signing with NSEC3 is a three-phase process:

 1. First, zone apex records are adjusted and (re)signed.

 2. Then, regular zone nodes are walked; signatures are generated for
    zone data and the NSEC3 chain is gradually built, but not yet
    signed.

 3. When all the regular zone nodes are processed, the NSEC3 chain is
    walked and signed.

This approach minimizes the amount of computation required because every
NSEC3 record is only signed once (if NSEC3 records were signed
immediately upon creation, their signatures would have to be regenerated
for every Next Hashed Owner Name change caused by new nodes being added
to the NSEC3 chain).

During steps 2-3 of the initial signing process, redundant computation
is further avoided by only creating one signature for any <RRset, key>
tuple.

Change 3020 fixed a bug which prevented type bitmaps for NSEC3 records
matching the zone apex from being updated when private type records
indicating a signing process in progress were inserted by named at zone
apex.  As a part of that fix, a new function called add_chains() was
added; its intended purpose was to update existing NSEC(3) records for
the zone apex.  However, its implementation also allows NSEC3 records to
be created, not just modififed.  Furthermore, change 3020 also caused
all records added/modified in step 1 of the initial signing process to
be signed, which was not the case before.  Combined, these two changes
made it possible for a signed NSEC3 record matching the zone apex to be
added to the zone in step 1 of the initial signing process, which is
incompatible with its design because no NSEC3 signatures are expected to
exist before step 3 is reached.

The net effect of all the above is that an NSEC3 record matching the
zone apex may be created, signed, and subsequently modified without
regenerating its signature, rendering the latter invalid.

Fix by making dns_nsec3_addnsec3sx() take an additional a

--- a/bin/tests/system/autosign/ns3/named.conf.in
+++ b/bin/tests/system/autosign/ns3/named.conf.in
@@ -295,4 +295,11 @@ zone "dname-at-apex-nsec3.example" {
 	auto-dnssec maintain;
 };
 
+zone "insecure-with-nsec3param.example." {
+	type master;
+	file "insecure-with-nsec3param.example.db";
+	allow-update { any; };
+	auto-dnssec maintain;
+};
+
 include "trusted.conf";
