Improve and extend "auto-dnssec" tests
Just testing whether an NSEC3 record exists with the DNSKEY bit set in
its type bitmap is arguably not a solid enough test for how named
processes a signed zone with "auto-dnssec maintain;" set and extra keys
available.  Rather than querying a resolver for a record at the apex of
such a zone, get the whole zone from an authoritative server and run it
through dnssec-verify to improve the comprehensiveness of the test.

Add similar tests for signed zones which have extra keys using a
different algorithm available.

Prevent zone file duplication by making all relevant tests use the same
source file, "auto-nsec.example.db.in".

--- a/bin/tests/system/dnssec/ns3/named.conf.in
+++ b/bin/tests/system/dnssec/ns3/named.conf.in
@@ -212,11 +212,25 @@ zone "auto-nsec.example" {
 	file "auto-nsec.example.db.signed";
 };
 
+zone "auto-nsec-two-algos.example" {
+	type master;
+	auto-dnssec maintain;
+	allow-update { !0.0.0.0; };
+	file "auto-nsec-two-algos.example.db.signed";
+};
+
 zone "auto-nsec3.example" {
 	type master;
 	auto-dnssec maintain;
 	allow-update { !0.0.0.0; };
 	file "auto-nsec3.example.db.signed";
+};
+
+zone "auto-nsec3-two-algos.example" {
+	type master;
+	auto-dnssec maintain;
+	allow-update { !0.0.0.0; };
+	file "auto-nsec3-two-algos.example.db.signed";
 };
 
 zone "insecure.below-cname.example" {
