Reinstate Makefile.am to bin/pkcs11

--- a/configure.ac
+++ b/configure.ac
@@ -2363,6 +2363,7 @@ AC_CONFIG_FILES([Makefile
 		 bin/check/Makefile
 		 bin/confgen/Makefile
 		 bin/python/Makefile
+		 bin/pkcs11/Makefile
 		 bin/plugins/Makefile
 		 lib/Makefile
 		 lib/samples/Makefile
