Add missing libns.la to bin/tools/Makefile.am

--- a/bin/tools/Makefile.am
+++ b/bin/tools/Makefile.am
@@ -16,12 +16,13 @@ AM_CPPFLAGS = \
 	$(JSON_C_CFLAGS)			\
 	-DSYSCONFDIR=\"${sysconfdir}\"
 
-LDADD =				\
-	${top_builddir}/lib/libbind9.la \
-	${top_builddir}/lib/libisc.la \
-	${top_builddir}/lib/libirs.la	\
-	${top_builddir}/lib/libdns.la	\
-	${top_builddir}/lib/libisccfg.la
+LDADD =						\
+	${top_builddir}/lib/libbind9.la 	\
+	${top_builddir}/lib/libisc.la		\
+	${top_builddir}/lib/libirs.la		\
+	${top_builddir}/lib/libdns.la		\
+	${top_builddir}/lib/libisccfg.la	\
+	${top_builddir}/lib/libns.la
 
 bin_PROGRAMS =			\
 	arpaname		\
