--- a/bin/tests/system/dlzexternal/ns1/named.conf.in
+++ b/bin/tests/system/dlzexternal/ns1/named.conf.in
@@ -35,29 +35,29 @@ controls {
 };
 
 dlz "example one" {
-	database "dlopen ../driver/driver.la example.nil";
+	database "dlopen ../driver/dlzexternal.la example.nil";
 };
 
 dlz "example two" {
-	database "dlopen ../driver/driver.la alternate.nil";
+	database "dlopen ../driver/dlzexternal.la alternate.nil";
 };
 
 dlz "example three" {
-	database "dlopen ../driver/driver.la example.org";
+	database "dlopen ../driver/dlzexternal.la example.org";
 };
 
 dlz "unsearched1" {
-	database "dlopen ../driver/driver.la other.nil";
+	database "dlopen ../driver/dlzexternal.la other.nil";
 	search no;
 };
 
 dlz "unsearched2" {
-	database "dlopen ../driver/driver.la zone.nil";
+	database "dlopen ../driver/dlzexternal.la zone.nil";
 	search no;
 };
 
 dlz redzone {
-	database "dlopen ../driver/driver.la .";
+	database "dlopen ../driver/dlzexternal.la .";
 	search no;
 };
 
