--- a/bin/named/Makefile.am
+++ b/bin/named/Makefile.am
@@ -15,7 +15,7 @@ AM_CPPFLAGS = \
 	-I$(top_srcdir)/lib/bind9/include	\
 	$(DNSTAP_CFLAGS)			\
 	$(OPENSSL_CFLAGS)			\
-	$(JSON_C_CFLAGS)			\
+	$(JSON_C_CFLAGS) $(LIBXML2_CFLAGS)			\
 	$(ZLIB_CFLAGS)				\
 	-DNAMED_LOCALSTATEDIR=\"${localstatedir}\" \
 	-DNAMED_SYSCONFDIR=\"${sysconfdir}\"
@@ -75,5 +75,5 @@ named_LDADD =					\
 	$(OPENSSL_LIBS)				\
 	$(LIBCAP_LIBS)				\
 	$(DNSTAP_LIBS)				\
-	$(JSON_C_LIBS)				\
+	$(JSON_C_LIBS) $(LIBXML2_LIBS)				\
 	$(ZLIB_LIBS)
