--- a/bin/plugins/Makefile.am
+++ b/bin/plugins/Makefile.am
@@ -12,7 +12,7 @@ AM_CPPFLAGS = \
 	-I$(top_srcdir)/lib/irs/include		\
 	-I$(top_srcdir)/lib/bind9/include	\
 	$(OPENSSL_CFLAGS)			\
-	$(JSON_C_CFLAGS)
+	$(JSON_C_CFLAGS) $(LIBXML2_CFLAGS)
 
 pkglib_LTLIBRARIES = filter-aaaa.la
 
