--- a/bin/confgen/Makefile.am
+++ b/bin/confgen/Makefile.am
@@ -15,7 +15,7 @@ AM_CPPFLAGS = \
 	-I$(top_srcdir)/lib/bind9/include	\
 	$(LIBIDN2_CFLAGS)			\
 	$(OPENSSL_CFLAGS)			\
-	$(JSON_C_CFLAGS)			\
+	$(JSON_C_CFLAGS) $(LIBXML2_CFLAGS)			\
 	-DRNDC_KEYFILE=\"${sysconfdir}/rndc.key\"
 
 LDADD =					\
