--- a/bin/dnssec/Makefile.am
+++ b/bin/dnssec/Makefile.am
@@ -13,7 +13,7 @@ AM_CPPFLAGS = \
 	-I$(top_srcdir)/lib/irs/include		\
 	-I$(top_srcdir)/lib/bind9/include	\
 	$(OPENSSL_CFLAGS)			\
-	$(JSON_C_CFLAGS)			\
+	$(JSON_C_CFLAGS) $(LIBXML2_CFLAGS)			\
 	-DSYSCONFDIR=\"${sysconfdir}\"
 
 noinst_LTLIBRARIES = libdnssectool.la
