--- a/bin/nsupdate/Makefile.am
+++ b/bin/nsupdate/Makefile.am
@@ -14,7 +14,7 @@ AM_CPPFLAGS = \
 	-I$(top_srcdir)/lib/irs/include		\
 	-I$(top_srcdir)/lib/bind9/include	\
 	$(OPENSSL_CFLAGS)			\
-	$(JSON_C_CFLAGS)			\
+	$(JSON_C_CFLAGS) $(LIBXML2_CFLAGS)			\
 	-DSESSION_KEYFILE=\"${localstatedir}/run/named/session.key\" \
 	$(DST_GSSAPI_INC)
 
