--- a/bin/tests/system/Makefile.am
+++ b/bin/tests/system/Makefile.am
@@ -10,7 +10,7 @@ AM_CPPFLAGS = \
 	-I$(top_srcdir)/lib/isc/pthreads/include	\
 	-I$(top_srcdir)/lib/isc/include			\
 	-I$(top_srcdir)/lib/dns/include		\
-	$(JSON_C_CFLAGS)
+	$(JSON_C_CFLAGS) $(LIBXML2_CFLAGS)
 
 check_PROGRAMS =		\
 	feature-test		\
