--- a/lib/dns/tests/Makefile.am
+++ b/lib/dns/tests/Makefile.am
@@ -7,7 +7,7 @@ AM_CPPFLAGS = \
 	-DTESTS=\"$(abs_srcdir)\"		\
 	$(OPENSSL_CFLAGS)			\
 	$(CMOCKA_CFLAGS)			\
-	$(JSON_C_CFLAGS)
+	$(JSON_C_CFLAGS) $(LIBXML2_CFLAGS)
 
 LDADD = \
 	../../libisc.la		\
