--- a/lib/isc/tests/Makefile.am
+++ b/lib/isc/tests/Makefile.am
@@ -5,7 +5,7 @@ AM_CPPFLAGS = \
 	-I../include				\
 	-DTESTS=\"$(abs_srcdir)\"		\
 	$(OPENSSL_CFLAGS)			\
-	$(JSON_C_CFLAGS)			\
+	$(JSON_C_CFLAGS) $(LIBXML2_CFLAGS)			\
 	$(CMOCKA_CFLAGS)
 
 LDADD = 			\
