Fix the python vs dnssec-keymgr configuration

--- a/bin/tests/system/Makefile.am
+++ b/bin/tests/system/Makefile.am
@@ -51,6 +51,10 @@ TESTS = \
 	unknown upforwd verify views wildcard \
 	xfer xferquota zero zonechecks
 
+if HAVE_PYTHON
+	TESTS += keymgr
+endif
+
 LOG_COMPILER = ./system-test-driver.sh
 
 clean-local::
