--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -449,6 +449,7 @@ gcc:fedora30:amd64:
     CC: gcc
     CFLAGS: "-Wall -Wextra -O2 -g"
     EXTRA_CONFIGURE: "--with-libidn2"
+    PYTHON: python
   <<: *fedora_30_amd64_image
   <<: *build_job
 
