Restore --with-python-install-dir by mangling AM_PATH_PYTHON pythondir

--- a/bin/python/Makefile.am
+++ b/bin/python/Makefile.am
@@ -1,16 +1,16 @@
-do_subst = \
-	$(SED) -e 's,[@]PYTHON[@],$(PYTHON),g' \
-	       -e 's,[@]PYTHON_INSTALL_DIR[@],$(PYTHON_INSTALL_DIR),g' \
+do_subst = $(SED) \
+	       -e 's,[@]PYTHON[@],$(PYTHON),g' \
 	       -e 's,[@]prefix[@],$(prefix),g' \
+	       -e 's,[@]pythondir[@],$(pythondir),g' \
 	       -e 's,[@]sysconfdir[@],$(sysconfdir),g'
 
-EXTRA_DIST = 			\
+EXTRA_DIST =			\
 	isc/utils.py		\
 	dnssec-checkds.py	\
 	dnssec-coverage.py	\
 	dnssec-keymgr.py
 
-BUILT_SOURCES =			\
+BUILT_SOURCES =		\
 	isc/utils.py		\
 	isc/parsetab.py
 
@@ -33,25 +33,25 @@ dnssec-keymgr: dnssec-keymgr.py.in
 	$(do_subst) < $< > $@
 	chmod +x $@
 
-python_PYTHON =			\
-	isc/__init__.py		\
+python_PYTHON =		\
+	isc/__init__.py	\
 	isc/checkds.py		\
-	isc/coverage.py		\
+	isc/coverage.py	\
 	isc/dnskey.py		\
 	isc/eventlist.py	\
 	isc/keydict.py		\
-	isc/keyevent.py		\
+	isc/keyevent.py	\
 	isc/keymgr.py		\
 	isc/keyseries.py	\
 	isc/keyzone.py		\
-	isc/parsetab.py		\
+	isc/parsetab.py	\
 	isc/policy.py		\
 	isc/rndc.py		\
 	isc/utils.py
 
 bin_SCRIPTS =			\
 	dnssec-checkds		\
-	dnssec-coverage		\
+	dnssec-coverage	\
 	dnssec-keymgr
 
 CLEANFILES =			\
