--- a/bin/python/dnssec-coverage.py.in
+++ b/bin/python/dnssec-coverage.py.in
@@ -15,11 +15,7 @@ import sys
 
 sys.path.insert(0, os.path.dirname(sys.argv[0]))
 if os.name != 'nt':
-    if '@PYTHON_INSTALL_DIR@': # value of --with-python-install-dir
-        sys.path.insert(1, '@PYTHON_INSTALL_DIR@')
-    else:
-        sys.path.insert(1, os.path.join('@prefix@', 'lib',
-                        'python' + sys.version[:3], 'site-packages'))
+    sys.path.insert(1, "@pythondir@")
 
 import isc.coverage
 
