Run autoreconf -fi in latest Debian unstable image

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ variables:
   CI_REGISTRY_IMAGE: registry.gitlab.isc.org/isc-projects/images/bind9
   CCACHE_DIR: "/ccache"
   SOFTHSM2_CONF: "/var/tmp/softhsm2/softhsm2.conf"
+  PYTHON: python3
 
   # VirtualBox driver needs to set build_dir to "/builds" in gitlab-runner.toml
   KYUA_RESULT: "$CI_PROJECT_DIR/kyua.results"
@@ -296,6 +297,7 @@ gcc:centos6:amd64:
     CC: gcc
     CFLAGS: "-Wall -Wextra -O2 -g"
     EXTRA_CONFIGURE: "--with-libidn2 --disable-warn-error"
+    PYTHON: python
   <<: *centos_centos6_amd64_image
   <<: *build_job
 
@@ -318,6 +320,7 @@ gcc:centos7:amd64:
     CC: gcc
     CFLAGS: "-Wall -Wextra -O2 -g"
     EXTRA_CONFIGURE: "--enable-dnstap --with-libidn2"
+    PYTHON: python
   <<: *centos_centos7_amd64_image
   <<: *build_job
 
