--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -134,6 +134,7 @@ stages:
     --with-json-c \
     --prefix=$HOME/.local \
     --without-make-clean \
+    --with-python=python3 \
     $EXTRA_CONFIGURE \
     || cat config.log
     
@@ -317,7 +318,7 @@ gcc:centos7:amd64:
   variables:
     CC: gcc
     CFLAGS: "-Wall -Wextra -O2 -g"
-    EXTRA_CONFIGURE: "--enable-dnstap --with-libidn2"
+    EXTRA_CONFIGURE: "--enable-dnstap --with-libidn2 --with-python=python2"
   <<: *centos_centos7_amd64_image
   <<: *build_job
 
@@ -448,7 +449,7 @@ gcc:fedora30:amd64:
   variables:
     CC: gcc
     CFLAGS: "-Wall -Wextra -O2 -g"
-    EXTRA_CONFIGURE: "--with-libidn2"
+    EXTRA_CONFIGURE: "--with-libidn2 --with-python"
   <<: *fedora_30_amd64_image
   <<: *build_job
 
@@ -580,7 +581,6 @@ clang:stretch:amd64:
   variables:
     CC: clang
     CFLAGS: "-Wall -Wextra -Wenum-conversion -O2 -g"
-    EXTRA_CONFIGURE: "--with-python=python3"
   <<: *debian_stretch_amd64_image
   <<: *build_job
 
