--- a/bin/tests/system/dnssec/ns2/example.db.in
+++ b/bin/tests/system/dnssec/ns2/example.db.in
@@ -162,4 +162,7 @@ ns.managed-future	A	10.53.0.3
 revkey			NS	ns.revkey
 ns.revkey		A	10.53.0.3
 
+offline-ksk		NS	ns.offline-ksk
+ns.offline-ksk		A	10.53.0.3
+
 dname-at-apex-nsec3	NS	ns3
