--- a/bin/dnssec/Makefile.in
+++ b/bin/dnssec/Makefile.in
@@ -15,17 +15,22 @@ VERSION=@BIND9_VERSION@
 
 @BIND9_MAKE_INCLUDES@
 
-CINCLUDES =	${DNS_INCLUDES} ${ISC_INCLUDES} @OPENSSL_INCLUDES@
+CINCLUDES =	${DNS_INCLUDES} ${ISC_INCLUDES} ${ISCCFG_INCLUDES} \
+		@OPENSSL_INCLUDES@
 
-CDEFINES =	-DVERSION=\"${VERSION}\"
+CDEFINES =	-DVERSION=\"${VERSION}\" \
+		-DNAMED_CONFFILE=\"${sysconfdir}/named.conf\"
+
 CWARNINGS =
 
 DNSLIBS =	../../lib/dns/libdns.@A@ @DNS_CRYPTO_LIBS@
 ISCLIBS =	../../lib/isc/libisc.@A@ @OPENSSL_LIBS@
+ISCCFGLIBS =	../../lib/isccfg/libisccfg.@A@
 ISCNOSYMLIBS =	../../lib/isc/libisc-nosymtbl.@A@ @OPENSSL_LIBS@
 
 DNSDEPLIBS =	../../lib/dns/libdns.@A@
 ISCDEPLIBS =	../../lib/isc/libisc.@A@
+ISCCFGDEPLIBS =	../../lib/isccfg/libisccfg.@A@
 
 DEPLIBS =	${DNSDEPLIBS} ${ISCDEPLIBS}
 
@@ -38,24 +43,28 @@ TARGETS =	dnssec-cds@EXEEXT@ dnssec-dsfromkey@EXEEXT@ \
 		dnssec-importkey@EXEEXT@ dnssec-keyfromlabel@EXEEXT@ \
 		dnssec-keygen@EXEEXT@ dnssec-revoke@EXEEXT@ \
 		dnssec-settime@EXEEXT@ dnssec-signzone@EXEEXT@ \
-		dnssec-verify@EXEEXT@
+		dnssec-verify@EXEEXT@ \
+		kasp-setupdb@EXEEXT@
 
 OBJS =		dnssectool.@O@
 
 SRCS =		dnssec-cds.c dnssec-dsfromkey.c dnssec-importkey.c \
 		dnssec-keyfromlabel.c dnssec-keygen.c dnssec-revoke.c \
 		dnssec-settime.c dnssec-signzone.c dnssec-verify.c \
-		dnssectool.c
+		dnssectool.c \
+		kasp-setupdb.c
 
-MANPAGES =	dnssec-cds.8 dnssec-dsfromkey.8  dnssec-importkey.8 \
+MANPAGES =	dnssec-cds.8 dnssec-dsfromkey.8 dnssec-importkey.8 \
 		dnssec-keyfromlabel.8 dnssec-keygen.8 dnssec-revoke.8 \
-		dnssec-settime.8 dnssec-signzone.8 dnssec-verify.8
+		dnssec-settime.8 dnssec-signzone.8 dnssec-verify.8 \
+		kasp-setupdb.8
 
 HTMLPAGES =	dnssec-cds.html dnssec-dsfromkey.html \
 		dnssec-importkey.html dnssec-keyfromlabel.html \
 		dnssec-keygen.html dnssec-revoke.html \
 		dnssec-settime.html dnssec-signzone.html \
-		dnssec-verify.html
+		dnssec-verify.html \
+		kasp-setupdb.html
 
 MANOBJS =	${MANPAGES} ${HTMLPAGES}
 
@@ -104,6 +113,14 @@ dnssec-settime@EXEEXT@: dnssec-settime.@O@ ${OBJS} ${DEPLIBS}
 dnssec-importkey@EXEEXT@: dnssec-importkey.@O@ ${OBJS} ${DEPLIBS}
 	${LIBTOOL_MODE_LINK} ${PURIFY} ${CC} ${CFLAGS} ${LDFLAGS} -o $@ \
 	dnssec-importkey.@O@ ${OBJS} ${LIBS}
+
+kasp-setupdb.@O@: kasp-setupdb.c
+	${LIBTOOL_MODE_COMPILE} ${CC} ${ALL_CFLAGS} ${CDEFINES} \
+		-c ${srcdir}/kasp-setupdb.c
+
+kasp-setupdb@EXEEXT@: kasp-setupdb.@O@ ${OBJS} ${DEPLIBS} ${ISCCFGDEPLIBS}
+	export BASEOBJS="kasp-setupdb.@O@ ${OBJS} ${LIBS} ${ISCCFGLIBS}"; \
+	${FINALBUILDCMD}
 
 doc man:: ${MANOBJS}
 
