--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -246,6 +246,7 @@ docs:sid:amd64:
     - make -C doc/arm Bv9ARM.html
   dependencies:
     - autoreconf:sid:amd64
+  allow_failure: true
   artifacts:
     paths:
       - doc/arm/
