dnssec-policy -> dnssecpolicy
Somehow I cannot reuse the name `dnssec-policy` at the zone options
level.

--- a/bin/tests/system/checkconf/good-kasp.conf
+++ b/bin/tests/system/checkconf/good-kasp.conf
@@ -14,7 +14,7 @@
  */
 
 /* cut here */
-dnssec-policy "nsec3" {
+dnssecpolicy "nsec3" {
 	description "policy for zones that require zone walking mitigation";
 	signatures-resign PT2H;
 	signatures-refresh P3D;
@@ -64,4 +64,3 @@ zone "example" {
 	dnssec-policy "nsec3";
 	file "example.db";
 };
-
