Remove rules to build old manpages

--- a/Makefile.in
+++ b/Makefile.in
@@ -18,12 +18,7 @@ SUBDIRS =	make lib fuzz bin doc
 TARGETS =
 PREREQS =	bind.keys.h
 
-MANPAGES =	isc-config.sh.1
-
-HTMLPAGES =	isc-config.sh.html
-
-MANOBJS =	README HISTORY OPTIONS CONTRIBUTING PLATFORMS \
-		${MANPAGES} ${HTMLPAGES}
+MANOBJS =	README HISTORY OPTIONS CONTRIBUTING PLATFORMS
 
 @BIND9_MAKE_RULES@
 
@@ -54,21 +49,11 @@ installdirs:
 	${DESTDIR}${localstatedir}/run ${DESTDIR}${sysconfdir}
 	$(SHELL) ${top_srcdir}/mkinstalldirs ${DESTDIR}${mandir}/man1
 
-install:: isc-config.sh installdirs
-	${INSTALL_SCRIPT} isc-config.sh ${DESTDIR}${bindir}
-	rm -f ${DESTDIR}${bindir}/bind9-config
-	@LN@ ${DESTDIR}${bindir}/isc-config.sh ${DESTDIR}${bindir}/bind9-config
-	${INSTALL_DATA} ${top_srcdir}/isc-config.sh.1 ${DESTDIR}${mandir}/man1
-	rm -f ${DESTDIR}${mandir}/man1/bind9-config.1
-	@LN@ ${DESTDIR}${mandir}/man1/isc-config.sh.1 ${DESTDIR}${mandir}/man1/bind9-config.1
+install:: installdirs
 	${INSTALL_DATA} ${top_srcdir}/bind.keys ${DESTDIR}${sysconfdir}
 
 uninstall::
 	rm -f ${DESTDIR}${sysconfdir}/bind.keys
-	rm -f ${DESTDIR}${mandir}/man1/bind9-config.1
-	rm -f ${DESTDIR}${mandir}/man1/isc-config.sh.1
-	rm -f ${DESTDIR}${bindir}/bind9-config
-	rm -f ${DESTDIR}${bindir}/isc-config.sh
 
 tags:
 	rm -f TAGS
